# template_data_repo

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.html  readme.ipynb  readme.md
.devcontainer/: devcontainer.json  postCreateCommand
.github/workflow-templates/: build_and_publish.yml  test.yml
.github/workflows-templates/: build_and_publish.yml  test.yml
docs/: Gemfile  _config.yml  data.json
notebooks/: example.ipynb  setup.py
script/: lint  test
